--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   /*font-family: 'Courier New', Courier, monospace;*/
   /*font-family: 'Yu Gothic', Courier, monospace;*/
-  font-family: "Trebuchet MS", Helvetica, sans-serif
+  font-family: "Trebuchet MS", Helvetica, sans-serif;
   font-weight:bolder;
   color:black;
   background-color:white;
