--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
 body {
   /*font-family: 'Courier New', Courier, monospace;*/
   /*font-family: 'Yu Gothic', Courier, monospace;*/
-  font-family: "Trebuchet MS", Helvetica, sans-serif;
-  font-weight:bolder;
+  font-family: "Objects sans regular", Helvetica, sans-serif;
+  /*font-family: 'Honey', Helvetica, sans-serif;*/
+  /*font-weight:bold;*/
   color:black;
   background-color:white;
   /*background-color:#ffc5e0;*/
@@ -37,11 +38,12 @@ li{
 	padding: 8px;
   margin: 0px;
   margin-top:10px;
+  font-size: 20px;
+  font-weight:bolder;
 }
 
 a {
   
-  font-size: 20px;
   display: block;
   text-align: center;
   padding: 8px;
@@ -55,6 +57,7 @@ a {
 
 
 .h1{
+  /*font-family: 'Honey', Helvetica, sans-serif;*/
   padding:0px;
   text-align: center;
   max-width:700px;
@@ -63,17 +66,19 @@ a {
   margin-right:auto;
   margin-top:20px;
   margin-bottom:40px;
+  text-transform: uppercase;
 }
 
 .h2{
+  font-family: 'Honey', Helvetica, sans-serif;
   padding:0px;
   text-align: center;
   max-width:700px;
-  font-size: 35px;
+  font-size: 40px;
   margin-left:auto;
   margin-right:auto;
   margin-top:0px;
-  margin-bottom:20px;
+  margin-bottom:0px;
 }
 /*img {
   width: 100px;
