--- a/style.css
+++ b/style.css
@@ -62,11 +62,13 @@ a {
   text-align: center;
   max-width:700px;
   font-size: 65px;
+  font-size: 90px;
   margin-left:auto;
   margin-right:auto;
   margin-top:20px;
   margin-bottom:40px;
-  text-transform: uppercase;
+  /*text-transform: uppercase;*/
+  font-family: 'Brush Script MT', cursive;
 }
 
 .h2{
@@ -74,7 +76,7 @@ a {
   padding:0px;
   text-align: center;
   max-width:700px;
-  font-size: 40px;
+  font-size: 30px;
   margin-left:auto;
   margin-right:auto;
   margin-top:0px;
