--- a/style.css
+++ b/style.css
@@ -18,12 +18,12 @@ body {
 
 .logo{
   width:300px;
-  max-width:100%;
+  max-width:40%;
 }
 
 .cake{
   width:500px;
-  max-width:100%;
+  max-width:80%;
 
 }
 
@@ -68,7 +68,8 @@ a:hover{
   padding:0px;
   text-align: center;
   max-width:700px;
-  font-size: 80px;
+  font-size: 70px;
+  font-size: 12vw;
   margin-left:auto;
   margin-right:auto;
   margin-top:20px;
@@ -80,7 +81,7 @@ a:hover{
 
 .cursive{
   font-family: 'Brush Script MT', cursive;
-  font-size: 100px;
+  font-size: 14vw;
 
 }
 .h2{
@@ -93,6 +94,15 @@ a:hover{
   margin-right:auto;
   margin-top:0px;
   margin-bottom:0px;
+}
+
+@media screen and (min-width: 800px) {
+  .h1 {
+    font-size: 80px;
+  }
+  .cursive{
+    font-size:100px;
+  }
 }
 /*img {
   width: 100px;
