--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ li{
 	padding: 8px;
   margin: 0px;
   margin-top:10px;
-  font-size: 20px;
+  font-size: 5vw;
   font-weight:bolder;
 }
 
@@ -79,31 +79,42 @@ a:hover{
   /*font-family: 'Brush Script MT', cursive;*/
 }
 
+
 .cursive{
   font-family: 'Brush Script MT', cursive;
   font-size: 14vw;
-
 }
+
+
 .h2{
   /*font-family: 'Honey', Helvetica, sans-serif;*/
   padding:0px;
   text-align: center;
   max-width:700px;
-  font-size: 30px;
+  font-size: 5vw;
   margin-left:auto;
   margin-right:auto;
   margin-top:0px;
   margin-bottom:0px;
 }
 
+
 @media screen and (min-width: 800px) {
+  
+  li{
+    font-size:20px;
+  }
   .h1 {
     font-size: 80px;
   }
   .cursive{
     font-size:100px;
   }
+  .h2{
+    font-size: 30px;
+  }
 }
+
 /*img {
   width: 100px;
   height: 100px;
