--- a/style.css
+++ b/style.css
@@ -16,6 +16,11 @@ body {
 	justify-content: center;
 }
 
+.side-by-side{
+  margin-top:40px;
+  margin-bottom:30px;
+}
+
 .logo-link{
   width:300px;
   max-width:40%;
@@ -29,6 +34,12 @@ body {
   width:500px;
   max-width:80%;
 
+}
+
+.bemcasado{
+  width:400px;
+  max-width:50%;
+  height:min-content;
 }
 
 .dividing-line{
@@ -92,6 +103,7 @@ a:hover{
 .cursive{
   font-family: 'Brush Script MT', cursive;
   font-size: 14vw;
+  margin-top: 0px;
 }
 
 
@@ -100,12 +112,19 @@ a:hover{
   padding:0px;
   text-align: center;
   max-width:700px;
-  font-size: 5vw;
+  font-size: 4vw;
   margin-left:auto;
   margin-right:auto;
   padding: 8px;
   margin-top:0px;
   margin-bottom:0px;
+}
+
+.sidebar{
+  max-width:400px;
+  margin-left:10px;
+  margin-right:0px;
+  text-align: left;
 }
 
 
