--- a/style.css
+++ b/style.css
@@ -120,10 +120,17 @@ a:hover{
   margin-bottom:0px;
 }
 
+p{
+  font-size:3vw;
+  text-align: center;
+  margin:0px;
+  margin-top:3vw;
+}
+
 .sidebar{
   max-width:400px;
-  margin-left:10px;
-  margin-right:0px;
+  margin-left:4vw;
+  margin-right:4vw;
   text-align: left;
 }
 
@@ -141,6 +148,16 @@ a:hover{
   }
   .h2{
     font-size: 30px;
+  }
+
+  p{
+    font-size:24px;
+    margin-top:20px;
+  }
+
+  .sidebar{
+    margin-left:40px;
+    margin-right:40px;
   }
 
 }
