--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ body {
 .bemcasado{
   width:400px;
   max-width:50%;
-  height:min-content;
+  height:fit-content;
 }
 
 .dividing-line{
@@ -112,7 +112,7 @@ a:hover{
   padding:0px;
   text-align: center;
   max-width:700px;
-  font-size: 4vw;
+  font-size: 5vw;
   margin-left:auto;
   margin-right:auto;
   padding: 8px;
@@ -121,7 +121,7 @@ a:hover{
 }
 
 p{
-  font-size:3vw;
+  font-size:4vw;
   text-align: center;
   margin:0px;
   margin-top:3vw;
