--- a/style.css
+++ b/style.css
@@ -17,8 +17,8 @@ body {
 }
 
 .side-by-side{
-  margin-top:40px;
-  margin-bottom:30px;
+  margin-top:4vw;
+  margin-bottom:3vw;
 }
 
 .logo-link{
@@ -40,6 +40,8 @@ body {
   width:400px;
   max-width:50%;
   height:100%;
+  margin-top:auto;
+  margin-bottom:auto;
 }
 
 .dividing-line{
@@ -158,6 +160,11 @@ p{
   .sidebar{
     margin-left:40px;
     margin-right:40px;
+  }
+
+  .side-by-side{
+    margin-top:40px;
+    margin-bottom:30px;
   }
 
 }
