--- a/style.css
+++ b/style.css
@@ -16,6 +16,8 @@ body {
 }
 
 .side-by-side{
+  flex-direction: column-reverse;
+	justify-content: center;
   margin-top:4vw;
   margin-bottom:3vw;
 }
@@ -36,8 +38,8 @@ body {
 }
 
 .bemcasado{
-  width:400px;
-  max-width:50%;
+  width:800px;
+  max-width:100%;
   height:100%;
   margin-top:auto;
   margin-bottom:auto;
@@ -127,11 +129,12 @@ p{
   font-size:4vw;
   text-align: center;
   margin:0px;
-  margin-top:3vw;
+  margin-bottom:3vw;
+  margin-top:0px;
 }
 
 .sidebar{
-  max-width:400px;
+  max-width:800px;
   margin-left:4vw;
   margin-right:4vw;
   text-align: left;
@@ -151,11 +154,19 @@ p{
     font-size:100px;
   }
   .h2{
-    font-size: 30px;
+    font-size: 28px;
+  }
+
+  
+  .bemcasado{
+    width:400px;
+    max-width:50%;
   }
 
   p{
     font-size:21px;
+    margin-bottom:0px;
+    
     margin-top:20px;
   }
 
@@ -167,6 +178,12 @@ p{
   .side-by-side{
     margin-top:40px;
     margin-bottom:30px;
+    flex-direction: row;
+  }
+
+  
+  .sidebar{
+    max-width:400px;
   }
 
   ul{
