--- a/style.css
+++ b/style.css
@@ -39,10 +39,10 @@ body {
 
 .bemcasado{
   width:800px;
-  max-width:100%;
+  max-width:70%;
   height:100%;
-  margin-top:auto;
-  margin-bottom:auto;
+  margin-left:auto;
+  margin-right:auto;
 }
 
 .dividing-line{
